--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "Unofficial system for MÖRK BORG on Foundry VTT.",
   "scripts": {
     "build": "gulp dist",
-    "compile": "gulp css",
-    "watch": "gulp",
+    "sass": "gulp sass",
+    "watch": "gulp watch",
     "gulp": "gulp",
     "lint": "eslint --fix --ext .js ./"
   },
@@ -15,7 +15,8 @@
   "devDependencies": {
     "eslint": "^7.20.0",
     "gulp": "^4.0.2",
-    "gulp-autoprefixer": "^7.0.1",
+    "gulp-autoprefixer": "^6.1.0",
+    "gulp-concat": "^2.6.1",
     "gulp-sass": "^4.1.0",
     "gulp-sourcemaps": "^3.0.0"
   }
