--- a/package.json
+++ b/package.json
@@ -3,16 +3,24 @@
   "version": "1.0.0",
   "description": "Unofficial system for MÖRK BORG on Foundry VTT.",
   "scripts": {
-    "foo": "sass --help",
+    "check": "prettier --check .",
     "sass": "sass ./scss:./css",
-    "lint": "eslint --fix --ext .js ./",
+    "lint": "eslint --fix --ext .js ./module",
+    "precommit": "npm run validate",
+    "prepare": "husky install",
+    "pretty": "prettier --write .",
+    "validate": "npm-run-all check lint",
     "watch": "sass --watch ./scss:./css"
   },
   "repository": "https://github.com/fvtt-fria-ligan/morkborg-foundry-vtt.git",
   "author": "mcglincy",
   "license": "MIT",
   "devDependencies": {
+    "@typhonjs-fvtt/eslint-config-foundry.js": "^0.8.0",
     "eslint": "^7.32.0",
+    "husky": "^7.0.4",
+    "npm-run-all": "^4.1.5",
+    "prettier": "^2.5.1",
     "sass": "^1.49.0"
   },
   "dependencies": {}
