--- a/package.json
+++ b/package.json
@@ -3,13 +3,13 @@
   "version": "1.0.0",
   "description": "Unofficial system for MÖRK BORG on Foundry VTT.",
   "scripts": {
-    "check": "prettier --check .",
-    "sass": "sass ./scss:./css",
     "lint": "eslint --fix --ext .js ./module",
     "precommit": "npm run validate",
     "prepare": "husky install",
     "pretty": "prettier --write .",
-    "validate": "npm-run-all check lint",
+    "pretty-check": "prettier --check .",
+    "sass": "sass ./scss:./css",
+    "validate": "npm-run-all pretty-check lint",
     "watch": "sass --watch ./scss:./css"
   },
   "repository": "https://github.com/fvtt-fria-ligan/morkborg-foundry-vtt.git",
